...
                                           left: leftAndRigthSpacing,
                                           bottom: 0,
                                           right: leftAndRigthSpacing)
        layout.minimumLineSpacing = 10
        layout.scrollDirection = .vertical
        collectionView.collectionViewLayout = layout
        collectionView.accessibilityIdentifier = "clvServices"
    }
    
    /// Register necessary nibs
    private func registerNibs() {
        /// Main header registration
        let nibHeader: UINib = UINib(nibName: Nibs.ServicesHeader, bundle: nil)
...
